# Db-Schema-Ddl

./: .gitignore  .tmp-5006-err.txt  .tmp-5006-out.txt  .tmp-files-5001.json  .tmp-search-5000-after-fix.txt  .tmp-search-5001-after.txt  .tmp-search-5001-after2.txt  .tmp-search-5001.txt  .tmp-search-big-5001.txt  .tmp-sheets-5001.txt  AGENTS.md  ASYNC_PROCESSING.md  CLAUDE.md  ELECTRON_IMPLEMENTATION.md  README.md  agent.md  docker-compose.db-lab.yml  package-lock.json  package.json  replit.md  skills-lock.json  temp-upload.xlsx  template-invalid.xlsx  template-missing-type.xlsx  template.xlsx  tsconfig.json  vite.config.ts
.claude/: launch.json
.codex/: config.toml
.codex-runtime/: ddlgen-test.js
.gsd/: budget.json  session.json  status.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  db-workbench-operator-grade-plan.md  v1.0-v1.0-MILESTONE-AUDIT.md  v1.1-MILESTONE-PROPOSAL.md  v1.1-v1.1-MILESTONE-AUDIT.md  v1.2-v1.2-MILESTONE-AUDIT.md  v1.5-MILESTONE-AUDIT.md  v1.8-v1.8-MILESTONE-AUDIT.md
.tauri-keys/: update.key  update.key.pub
ai-cleanup/: 01-scan.md  02-score.md  03-rewrite-summary.md  04-verify.md
attached_assets/: 30.データベース定義書-給与_ISI_20260209_1770863427874.xlsx  README.md
claudedocs/: extension-system-design.md
client/: db-connector-extension.html  requirements.md
docs/: MCP-AUDIT-2026-02-27.md  MCP.md  db-tool-target-architecture.md  db-workbench-continuation-prompt.md  db-workbench-data-sync-design.md  db-workbench-extension-design.md  db-workbench-feature-checklist.md  db-workbench-operator-journey.md  (+14 more)
docs-site/: .tmp-devlog.txt  README.md  docusaurus.config.ts  package-lock.json  sidebars.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  constants.rs  ddl.rs  ddl_import.rs  ddl_import_export.rs  excel.rs  lib.rs  main.rs  models.rs  name_fix.rs  name_fix_apply.rs  schema_diff.rs  storage.rs  workbook_templates.rs
src-tauri/src/builtin_extensions/: enum_gen.rs  mod.rs
src-tauri/src/db_connector/: commands.rs  data_apply.rs  data_diff.rs  discovery.rs  explain.rs  grid_edit.rs  introspect.rs  mod.rs  object_inspect.rs  query.rs  sql_copilot.rs
src-tauri/src/extensions/: commands.rs  github.rs  lifecycle.rs  manifest.rs  mod.rs  process.rs  proxy.rs  registry.rs
(+1378 files in other folders)
