[package]
name = "db-schema-ddl-tauri"
version = "1.1.4"
description = "DB Schema DDL desktop shell powered by Tauri"
authors = ["SevenThRe"]
license = "MIT"
repository = "https://github.com/SevenThRe/Db-Schema-Ddl"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "db_schema_ddl_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
base64 = "0.22"
calamine = "0.26"
chrono = { version = "0.4", features = ["clock"] }
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
zip = { version = "2.4", default-features = false, features = ["deflate"] }
sqlparser = "0.53"
regex = "1"
rust_xlsxwriter = "0.79"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util", "sync", "process", "time"] }
